# Camvas

./: .gitignore  README.md  ShapeDetection.keras  ShapeDetection.tflite  ShapeDetection_final.keras  cx_build_app.py  installer_build.py  pyproject.toml  requirements.txt  setup_generator.iss
Camvas.egg-info/: PKG-INFO  SOURCES.txt
ShapeDetection/train/: events.out.tfevents.1776694272.DIVYESH.29796.0.v2  events.out.tfevents.1776694341.DIVYESH.16764.0.v2  events.out.tfevents.1776694643.DIVYESH.7204.0.v2  events.out.tfevents.1776694697.DIVYESH.32188.0.v2  events.out.tfevents.1776694768.DIVYESH.4552.0.v2  events.out.tfevents.1776694784.DIVYESH.14964.0.v2  events.out.tfevents.1776694839.DIVYESH.4120.0.v2  events.out.tfevents.1776698805.DIVYESH.39096.0.v2
ShapeDetection/validation/: events.out.tfevents.1776694769.DIVYESH.4552.1.v2  events.out.tfevents.1776694785.DIVYESH.14964.1.v2  events.out.tfevents.1776694840.DIVYESH.4120.1.v2  events.out.tfevents.1776698809.DIVYESH.39096.1.v2
app/: VirtualCam.py  WebCamApp.py  camera_worker.py  frame_processor.py  loading_screen.py  main.py  requirements.txt  status_app.py  virtual_cam.py
app/softcam_python/: simple_usage.py  softcam.exp  softcam.lib  softcam.pyd
ml/models/: ShapeDetection.onnx  ShapeDetection.tflite  labels
ml/training/: convert_to_onnx.py  features_labels_generator.py  shape_generators.py  train.py
model/: ShapeDetection.keras  ShapeDetection.onnx  ShapeDetection.tflite
model/shape_generators/: arrow_generator.py  (+4 more)
setup/: _meta.py  cx_build_app.py  publish.py  run_inno.py  setup_generator.iss
(+6 files in other folders)
